# pt-manager

./: .gitignore  DESIGN.md  PRODUCT_REQUIREMENTS.md  README.md  electron-builder.json5  index.html  package-lock.json  package.json  test_cdp_live.py  test_cf_bypass.py  test_cf_bypass_v2.py  vite.config.ts
.github/workflows/: release.yml
dist-electron/: main.js  node-cron-BdNEblMG.js  node-cron-CRG7V5hX.js  node-cron-DsKeDexq.js  node-cron-o29GTpcH.js
electron/: logger.ts  main.ts  scheduler.ts  store.ts  totp.ts  tray.ts
public/: site-tabs.html
src/: App.vue  env.d.ts  main.ts
src/components/ui/: UiCard.vue  UiCardSkeleton.vue  UiInfoTip.vue  UiPageHeader.vue
src/router/: index.ts
src/styles/: main.css
src/styles/base/: responsive-base.css  tokens.css
src/styles/components/: element-override.css  ui.css
src/styles/layout/: responsive.css
src/styles/utilities/: animations.css  touch.css
src/views/: Logs.vue  Settings.vue  Sites.vue
tauri-app/: package.json
tauri-app/src/: App.css  App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: cdp.rs  commands.rs  lib.rs  scheduler.rs  store.rs
